--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "hello.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jshint hello.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/FAC-Sixteen/travis-practice/issues"
   },
-  "homepage": "https://github.com/FAC-Sixteen/travis-practice#readme"
+  "homepage": "https://github.com/FAC-Sixteen/travis-practice#readme",
+  "devDependencies": {
+    "jshint": "^2.10.2"
+  }
 }
